fix: fix visual bug where horizontal scroll bar appear when opening closing side bar

--- a/resources/scss/_core.scss
+++ b/resources/scss/_core.scss
@@ -155,5 +155,6 @@ body {
     @include min-height(100);
     @include max-width(100);
     overflow-y: auto;
+    overflow-x: clip;
 
 }
